// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ничего не нарисует если нет интерьерной панорамы и экстерьерная панорама в процессе обработки 1`] = `
Array [
  Array [
    "🚗 auto.ru panorama error:",
    "exterior panorama is in processing",
  ],
  Array [
    "🚗 auto.ru panorama error:",
    "offer has no valid panorama",
  ],
]
`;

exports[`ничего не нарисует если нет интерьерной панорамы и экстерьерная панорама зафейлилась 1`] = `
Array [
  Array [
    "🚗 auto.ru panorama error:",
    "exterior panorama processing failed",
  ],
  Array [
    "🚗 auto.ru panorama error:",
    "offer has no valid panorama",
  ],
]
`;

exports[`ничего не нарисует если нет интерьерной панорамы и экстерьерной панорамы тоже нет 1`] = `
Array [
  Array [
    "🚗 auto.ru panorama error:",
    "offer has no valid panorama",
  ],
]
`;

exports[`ничего не нарисует если нет экстерьерной панорамы и интерьерная панорама в процессе обработки 1`] = `
Array [
  Array [
    "🚗 auto.ru panorama error:",
    "interior panorama is in processing",
  ],
  Array [
    "🚗 auto.ru panorama error:",
    "offer has no valid panorama",
  ],
]
`;

exports[`ничего не нарисует если нет экстерьерной панорамы и интерьерная панорама зафейлилась 1`] = `
Array [
  Array [
    "🚗 auto.ru panorama error:",
    "interior panorama processing failed",
  ],
  Array [
    "🚗 auto.ru panorama error:",
    "offer has no valid panorama",
  ],
]
`;

exports[`ничего не нарисует если нет экстерьерной панорамы и интерьерной панорамы тоже нет 1`] = `
Array [
  Array [
    "🚗 auto.ru panorama error:",
    "offer has no valid panorama",
  ],
]
`;

exports[`ничего не нарисует если обе панорамы в процессе обработки 1`] = `
Array [
  Array [
    "🚗 auto.ru panorama error:",
    "interior panorama is in processing",
  ],
  Array [
    "🚗 auto.ru panorama error:",
    "exterior panorama is in processing",
  ],
  Array [
    "🚗 auto.ru panorama error:",
    "offer has no valid panorama",
  ],
]
`;

exports[`ничего не нарисует если обе панорамы сфейлились 1`] = `
Array [
  Array [
    "🚗 auto.ru panorama error:",
    "interior panorama processing failed",
  ],
  Array [
    "🚗 auto.ru panorama error:",
    "exterior panorama processing failed",
  ],
  Array [
    "🚗 auto.ru panorama error:",
    "offer has no valid panorama",
  ],
]
`;

exports[`ничего не нарисует если оффер не активен 1`] = `
Array [
  Array [
    "🚗 auto.ru panorama error:",
    "offer is inactive",
  ],
]
`;

exports[`ничего не нарисует если оффера нет 1`] = `
Array [
  Array [
    "🚗 auto.ru panorama error:",
    "offer not found",
  ],
]
`;

exports[`при получении ответа от верхнего фрейма если его origin находится в списке разрешенных, отправит сообщение о готовности 1`] = `
Array [
  Object {
    "payload": undefined,
    "source": "auto_ru_panorama_frame",
    "type": "ready",
  },
  "http://foo.bar",
]
`;
